B-F Sandbox Full-Backup/src/objects/Wombat_Mobile_Config_Fields__c.object
<CustomObject>
    <description>The fields of the Objects to be synchronised with the client</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>The name of the field.</description>
        <label>FieldName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date &amp; Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The position of this field in relation to the create, select and update of the object</description>
        <label>Position</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wombat_Mobile_Config__c</fullName>
        <label>Wombat Mobile Config</label>
        <referenceTo>Wombat_Mobile_Config__c</referenceTo>
        <relationshipLabel>Wombat Mobile Config Fields</relationshipLabel>
        <relationshipName>Wombat_Mobile_Config_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wombat Mobile Config Fields</label>
    <nameField>
        <displayFormat>MCFN-{0}</displayFormat>
        <label>Mobile Config Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wombat Mobile Config Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>